@@ -125,7 +125,9 @@ const char* PluginManager::get_current_plugin()
 
 struct Plugin
 {
+    string source;
     string key;
+
     const BaseApi* api;
     void* handle;
 
@@ -133,7 +135,7 @@ struct Plugin
     { clear(); };
 
     void clear()
-    { key.clear(); api = nullptr; handle = nullptr; };
+    { source.clear(); key.clear(); api = nullptr; handle = nullptr; };
 };
 
 typedef map<string, Plugin> PlugMap;
@@ -160,7 +162,7 @@ static void set_key(string& key, Symbol* sym, const char* name)
 }
 
 static bool register_plugin(
-    const BaseApi* api, void* handle = nullptr)
+    const BaseApi* api, void* handle, const char* file)
 {
     if ( api->type >= PT_MAX )
         return false;
@@ -189,6 +191,7 @@ static bool register_plugin(
     p.key = key;
     p.api = api;
     p.handle = handle;
+    p.source = file;
 
     if ( handle )
         ++ref_map[handle].count;
@@ -196,13 +199,14 @@ static bool register_plugin(
     return true;
 }
 
-static void load_list(const BaseApi** api, void* handle = nullptr)
+static void load_list(
+    const BaseApi** api, void* handle = nullptr, const char* file = "static")
 {
     bool keep = false;
 
     while ( *api )
     {
-        keep = register_plugin(*api, handle) || keep;
+        keep = register_plugin(*api, handle, file) || keep;
         ++api;
     }
     if ( handle && !keep )
@@ -229,7 +233,7 @@ static bool load_lib(const char* file)
         dlclose(handle);
         return false;
     }
-    load_list(api, handle);
+    load_list(api, handle, file);
     return true;
 }
 
@@ -347,6 +351,7 @@ void PluginManager::load_plugins(const char* paths)
     ::load_plugins(paths);
 
     // scripts
+    // FIXIT-L need path to script for --list-plugins
     load_list(ScriptManager::get_plugins());
 
     add_plugins();
@@ -362,6 +367,7 @@ void PluginManager::list_plugins()
         cout << Markup::item();
         cout << Markup::sanitize(p.key);
         cout << " v" << p.api->version;
+        cout << " " << p.source;
         cout << endl;
     }
 }
